tests/src/frontend/syntax/invalid/fun_typo_class.sk
class X() {
  function f(): void {}
}
